tests/typing/faulty_indexing_b.sy
start :: fn do
    a :: (1, "abc", 1)
    a[1] + "abc"
    a[1] + 123
end
// error: $BinOp { .. }
